--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
   "author": "Ivan Cheung",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^0.19.0",
+    "commander": "^2.9.0",
+    "json2csv": "^3.0.1",
+    "jsonlint": "^1.6.2",
+    "line-reader": "^0.3.0",
+    "request": "^2.65.0"
   }
 }
