--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "accounting": "^0.4.1",
     "cheerio": "^0.19.0",
+    "chromedriver": "^2.20.0",
     "commander": "^2.9.0",
     "edit-google-spreadsheet": "^0.2.20",
     "google-translate": "^1.0.2",
