- buymaSubmitter: Brought it to new heights, including currency conversion for price

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "json2csv": "^3.0.1",
     "jsonlint": "^1.6.2",
     "line-reader": "^0.3.0",
+    "money": "^0.2.0",
+    "open-exchange-rates": "^0.3.0",
     "parse": "^1.6.9",
     "request": "^2.65.0",
     "selenium-webdriver": "^2.48.2",
